--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -126,6 +126,14 @@
 
   body {
     @apply bg-background text-foreground;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  #root {
+    height: 100%;
+    width: 100%;
   }
 
   /**
@@ -135,6 +143,9 @@
 
   html {
     font-size: var(--font-size);
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   h1 {
